deploy/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car
  namespace: vacuumlabs
  labels:
    app: car
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car
  template:
    metadata:
      labels:
        app: car
    spec:
      containers:
      - image: miksavacuum/car:latest
        imagePullPolicy: Always
        name: car
        ports:
        - containerPort: 3030
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: k8s-1
---
apiVersion: v1
kind: Service
metadata:
  name: car
  namespace: vacuumlabs
spec:
  selector:
    app: car
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3030
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: vacuumlabs
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/server-alias: "car.mmik.cz"
spec:
  tls:
  - hosts:
    - car.mmik.cz
    secretName: car.mmik.cz
  rules:
  - host: car.mmik.cz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: car
            port:
              number: 80
